<resources>
    <string name="app_name">APKUpdater</string>
    <string name="app_description_html"><![CDATA[<html><body style=\"text-align:justify\"><p>APKUpdater is a tool that simplifies the process of finding updates for your installed apps. It will provide functionality similar to an app store without having to install the associated spyware that comes with it. This is a very useful app for those who want to run Android without an app store.</p><p>Features:</p><ul><li>Get updates from multiple sources</li><li>Schedule background checks</li><li>Supports Android 2.3 to 8</li><li>Ignore list of apps to not check for updates</li><li>Modern material design with multi theme support</li><li>Display notifications when updates are found</li><li>Search for new apps to install</li></ul><p>Used libraries:</p><ul><li><a href="https://github.com/androidannotations/androidannotations">AndroidAnnotations</a></li><li><a href="https://github.com/jhy/jsoup">Jsoup</a></li><li><a href="https://github.com/square/otto">Otto</a></li><li><a href="https://github.com/google/gson">Gson</a></li><li><a href="https://github.com/square/okhttp">OkHttp</a></li><li><a href="https://github.com/yeriomin/play-store-api">play-store-api</a></li></ul><p>Update sources:</p><ul><li><a href="http://apkmirror.com">APKMirror</a></li><li><a href="https://play.google.com">Google Play</a></li><li><a href="https://apkpure.com">APKPure</a></li><li><a href="http://en.uptodown.com/">Uptodown</a></li></ul><p>Copyright &copy; 2017 Rumboalla. Licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3</a>.</p></body></html>]]></string>
    <string name="action_settings">Settings</string>
    <string name="action_log">Log</string>
    <string name="action_check_for_updates">Check for updates</string>
    <string name="tab_installed">Installed</string>
    <string name="tab_updates">Updates</string>
    <string name="tab_search">Search</string>
    <string name="tab_about">About</string>
    <string name="notification_update_title">Checking for updates</string>
    <string name="notification_update_content">$1/$2</string>
    <string name="notification_update_title_finished">Finished checking for updates</string>
    <string name="notification_update_content_finished">Found $1 update(s)</string>
    <string name="notification_update_title_failed">Checking for updates failed</string>
    <string name="already_updating">Already checking for updates.</string>
    <string name="update_finished">Checking for updates finished.</string>
    <string name="update_finished_with_errors">Checking for updates finished with $1 error(s).</string>
    <string name="update_failed">Checking for updates failed with exception $1.</string>
    <string name="update_no_sources">At least one source must be selected.</string>
    <string name="preferences_general_category">General settings</string>
    <string name="preferences_filter_category">Filter settings</string>
    <string name="preferences_sources_category">Update sources</string>
    <string name="preferences_play_category">Google Play Settings</string>
    <string name="preferences_general_skip_experimental_title">Exclude experimental builds</string>
    <string name="preferences_general_skip_experimental_summary">This will try to exclude experimental builds (alpha, beta) from the updates.</string>
    <string name="preferences_general_skip_experimental_key" translatable="false">preferences_general_skip_experimental_key</string>
    <string name="preferences_general_self_update_title">Self update check on startup</string>
    <string name="preferences_general_self_update_summary">The app will check for updates of itself on startup. If an update is found, a notification will be displayed and clicking on the notification will update the app.</string>
    <string name="preferences_general_self_update_key" translatable="false">preferences_general_self_update_key</string>
    <string name="preferences_general_disable_animations_title">Disable animations</string>
    <string name="preferences_general_disable_animations_summary">This will disable all animations and transitions.</string>
    <string name="preferences_general_disable_animations_key" translatable="false">preferences_general_disable_animations_key</string>
    <string name="preferences_general_skip_architecture_title">Exclude other architectures</string>
    <string name="preferences_general_skip_architecture_summary">This will try to exclude apps that are not compatible with your architecture. Only works with APKMIrror.</string>
    <string name="preferences_general_skip_architecture_key" translatable="false">preferences_general_skip_architecture_key</string>
    <string name="preferences_general_skip_minapi_title">Exclude incompatible API level</string>
    <string name="preferences_general_skip_minapi_summary">This will try to exclude apps that are not compatible with your Android version. Only works with APKMirror.</string>
    <string name="preferences_general_skip_minapi_key" translatable="false">preferences_general_skip_minapi_key</string>
    <string name="preferences_general_exclude_system_apps_title">Exclude system apps</string>
    <string name="preferences_general_exclude_system_apps_summary">This will exclude system apps from the updates.</string>
    <string name="preferences_general_exclude_system_apps_key" translatable="false">preferences_general_exclude_system_apps_key</string>
    <string name="preferences_general_exclude_disabled_apps_title">Exclude disabled apps</string>
    <string name="preferences_general_exclude_disabled_apps_summary">This will exclude disabled apps from the updates.</string>
    <string name="preferences_general_exclude_disabled_apps_key" translatable="false">preferences_general_exclude_disabled_apps_key</string>
    <string name="preferences_general_ignorelist_title">App ignore list</string>
    <string name="preferences_general_ignorelist_summary">This will exclude apps from the update check.</string>
    <string name="preferences_general_ignorelist_value">com.google.android.gms,com.google.android.gsf,com.android.vending</string>
    <string name="preferences_general_ignorelist_key" translatable="false">preferences_general_ignorelist_key</string>
    <string name="preferences_general_notification_title">Notifications</string>
    <string name="preferences_general_notification_key" translatable="false">preferences_general_notification_key</string>
    <string name="preferences_general_theme_title">Theme</string>
    <string name="preferences_general_theme_key" translatable="false">preferences_general_theme_key</string>
    <string name="preferences_general_alarm_title">Check for updates</string>
    <string name="preferences_general_alarm_key" translatable="false">preferences_general_alarm_key</string>
    <string name="preferences_general_num_threads_title">Number of threads</string>
    <string name="preferences_general_num_threads_key" translatable="false">preferences_general_num_threads_key</string>
    <string name="preferences_general_use_apkmirror_title">Updates from APKMirror</string>
    <string name="preferences_general_use_apkmirror_summary">This will check for updates on APKMirror.</string>
    <string name="preferences_general_use_apkmirror_key" translatable="false">preferences_general_use_apkmirror_key</string>
    <string name="preferences_general_use_play_title">Updates from Google Play</string>
    <string name="preferences_general_use_play_summary">This will check for updates on Google Play.</string>
    <string name="preferences_general_use_play_key" translatable="false">preferences_general_use_play_key</string>
    <string name="preferences_general_use_uptodown_title">Updates from Uptodown</string>
    <string name="preferences_general_use_uptodown_summary">This will check for updates on Uptodown. Slow, needs many requests.</string>
    <string name="preferences_general_use_uptodown_key" translatable="false">preferences_general_use_uptodown_key</string>
    <string name="preferences_general_use_apkpure_title">Updates from APKPure</string>
    <string name="preferences_general_use_apkpure_summary">This will check for updates on APKPure.com. Needs 2 requests per app, so it\'s slower.</string>
    <string name="preferences_general_use_apkpure_key" translatable="false">preferences_general_use_apkpure_key</string>
    <string name="preferences_general_wifi_only_title">Wi-Fi only</string>
    <string name="preferences_general_wifi_only_summary">Only check for updates when connected to a Wi-Fi network.</string>
    <string name="preferences_general_wifi_only_key" translatable="false">preferences_general_wifi_only_key</string>
    <string name="preferences_general_update_hour_title">Update hour</string>
    <string name="preferences_general_update_hour_key" translatable="false">preferences_general_update_hour_key</string>
    <string name="preferences_play_root_install_key" translatable="false">preferences_play_root_install_key</string>
    <string name="preferences_play_root_install_title">Root install</string>
    <string name="preferences_play_root_install_summary">Install apps in the background using root. NEEDS ROOT.</string>
    <string name="preferences_play_automatic_install_key" translatable="false">preferences_play_automatic_install_key</string>
    <string name="preferences_play_automatic_install_title">Automatic update installation</string>
    <string name="preferences_play_automatic_install_summary">All updates will be installed automatically. NOT IMPLEMENTED YET. NEEDS ROOT.</string>
    <string name="notification_never">Never</string>
    <string name="notification_always">Always</string>
    <string name="notification_background">Background</string>
    <string name="notification_if_at_least_1">If updates are available</string>
    <string name="alarm_never">Never</string>
    <string name="alarm_daily">Daily</string>
    <string name="alarm_weekly">Weekly</string>
    <string name="theme_blue">Blue Meth</string>
    <string name="theme_pink">Pink Panther</string>
    <string name="theme_dark">Dark Droid</string>
    <string name="theme_orange">Orange Juice</string>
    <string name="theme_bloody">Bloody Void</string>
    <string name="content_description_app_icon">App Icon</string>
    <string name="update_check_failed_no_internet">Checking for updates failed: No internet connection.</string>
    <string name="update_check_failed_no_wifi">Checking for updates failed: No Wi-Fi.</string>
    <string name="num_threads_one" translatable="false">1</string>
    <string name="num_threads_three" translatable="false">3</string>
    <string name="num_threads_five" translatable="false">5</string>
    <string name="num_threads_ten" translatable="false">10</string>
    <string name="action_ignore_app">IGNORE</string>
    <string name="action_unignore_app">UNIGNORE</string>
    <string name="action_apkmirror" translatable="false">APKMIRROR</string>
    <string name="action_apkpure" translatable="false">APKPURE</string>
    <string name="action_uptodown" translatable="false">UPTODOWN</string>
    <string name="action_evozi" translatable="false">EVOZI</string>
    <string name="action_play">INSTALL</string>
    <string name="action_installed">INSTALLED</string>
    <string name="update_hour_zero" translatable="false">00:00</string>
    <string name="update_hour_one" translatable="false">01:00</string>
    <string name="update_hour_two" translatable="false">02:00</string>
    <string name="update_hour_three" translatable="false">03:00</string>
    <string name="update_hour_four" translatable="false">04:00</string>
    <string name="update_hour_five" translatable="false">05:00</string>
    <string name="update_hour_six" translatable="false">06:00</string>
    <string name="update_hour_seven" translatable="false">07:00</string>
    <string name="update_hour_eight" translatable="false">08:00</string>
</resources>