<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <PreferenceCategory
        android:title="@string/preferences_general_category"
        android:key="pref_key_general_settings"
        android:layout="@layout/preference_category"
    >
        <SwitchPreference
            android:key="@string/preferences_general_skip_experimental_key"
            android:summary="@string/preferences_general_skip_experimental_summary"
            android:title="@string/preferences_general_skip_experimental_title"
            android:defaultValue="false"
        />
        <ListPreference
            android:key="@string/preferences_general_notification_key"
            android:title="@string/preferences_general_notification_title"
            android:summary="%s"
            android:entries="@array/notification_values"
            android:entryValues="@array/notification_values"
            android:defaultValue="@string/notification_always"
        />
        <ListPreference
            android:key="@string/preferences_general_alarm_key"
            android:title="@string/preferences_general_alarm_title"
            android:summary="%s"
            android:entries="@array/alarm_values"
            android:entryValues="@array/alarm_values"
            android:defaultValue="@string/alarm_daily"
        />
        <EditTextPreference
            android:key="@string/preferences_general_ignorelist_key"
            android:title="@string/preferences_general_ignorelist_title"
            android:summary="@string/preferences_general_ignorelist_summary"
            android:defaultValue="@string/preferences_general_ignorelist_value"
        />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_sources_category"
        android:key="pref_key_sources_settings"
        android:layout="@layout/preference_category"
    >
        <SwitchPreference
            android:key="@string/preferences_general_use_apkmirror_key"
            android:summary="@string/preferences_general_use_apkmirror_summary"
            android:title="@string/preferences_general_use_apkmirror_title"
            android:defaultValue="true"
        />
        <SwitchPreference
            android:key="@string/preferences_general_use_googleplay_key"
            android:summary="@string/preferences_general_use_googleplay_summary"
            android:title="@string/preferences_general_use_googleplay_title"
            android:defaultValue="false"
        />
        <SwitchPreference
            android:key="@string/preferences_general_use_apkpure_key"
            android:summary="@string/preferences_general_use_apkpure_summary"
            android:title="@string/preferences_general_use_apkpure_title"
            android:defaultValue="false"
        />
    </PreferenceCategory>
</PreferenceScreen>