<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.apkupdater.activity.MainActivity"
>
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/action_check_for_updates"
        android:icon="@drawable/ic_update_white_24dp"
        app:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_log"
        android:orderInCategory="200"
        android:title="@string/action_log"
        app:showAsAction="never"
    />
</menu>
